# obs-monitoring-plugin-studio-mode

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  audio-cue-dock.cpp  audio-cue-dock.hpp  audio-cue-engine.cpp  audio-cue-engine.h  audio-cue-module.cpp  build-macos.zsh  buildspec.json  install-admin.ps1
data/locale/: en-US.ini
